--- a/index.html
+++ b/index.html
@@ -23,9 +23,49 @@
   </header>
 
   <div class="title slide" id="title">
-    <h2>Solid: Your data, your choice</h2>
+    <h2>Solid<br><em>Your data, your choice</em></h2>
     <p class="author">Ruben Verborgh</p>
     <p class="affiliation">Ghent University – imec</p>
+  </div>
+
+  <div class="toc slide" id="toc">
+    <ul>
+      <li><a href="#toc-big-data">Big Data thinking</a></li>
+      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-big-data">
+    <ul>
+      <li class="current"><a href="#toc-big-data">Big Data thinking</a></li>
+      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-decentralized-data">
+    <ul>
+      <li><a href="#toc-big-data">Big Data thinking</a></li>
+      <li class="current"><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="toc-standards-commmunity">
+    <ul>
+      <li><a href="#toc-big-data">Big Data thinking</a></li>
+      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li class="current"><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+    </ul>
+  </div>
+
+  <div class="toc slide" id="recap">
+    <ul>
+      <li><a href="#toc-big-data">Big Data thinking</a></li>
+      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+    </ul>
   </div>
 
   <footer>
