--- a/index.html
+++ b/index.html
@@ -52,6 +52,113 @@
     </ul>
   </div>
 
+  <div class="slide" id="choice">
+    <h2>
+      Solid aims to restore <em>choice</em><br>
+      by separating data from apps.
+    </h2>
+    <ul>
+      <li>
+        Typical platforms nowadays store data<br>
+        inseparably from an application.
+        <ul>
+          <li class="next">If we need to access the data, we cannot choose our app.</li>
+          <li class="next">If we need to use the app, we can’t choose our data source.</li>
+        </ul>
+      </li>
+      <li class="next">
+        By separating data from apps,<br>
+        we create independent choices.
+        <ul>
+          <li class="next">
+            In essence, we‘re taking Web apps back to desktop mode,<br>
+            where one file can be opened by multiple apps.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="data-pods">
+    <h2>
+      Every piece of data created <em>by</em> a person<br>
+      or <em>about</em> them, is stored in a data pod.
+    </h2>
+    <figure class="cover width margin">
+      <img src="images/data-pods.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="decentralized-data">
+    <h2>
+      Apps and services appear similarly,<br>
+      but they blend data from many sources.
+    </h2>
+    <figure class="cover height margin">
+      <img src="images/decentralized-data.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="views">
+    <h2>
+      A person can grant apps and people access<br>
+      to very specific parts of their data.
+    </h2>
+    <figure class="cover width margin">
+      <img src="images/apps-as-views.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="markets">
+    <h2>
+      Separating app and storage competition<br>
+      creates better offerings for all parties.
+    </h2>
+    <figure class="cover width margin">
+      <img src="images/data-and-app-markets.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="infinite-innovation">
+    <h2>
+      By abandoning data harvesting,<br>
+      we restore permissionless innovation.
+    </h2>
+    <figure class="cover width margin">
+      <img src="images/infinite-innovation.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="ecosystem">
+    <h2>
+      Solid is not a platform to replace others,<br>
+      but a way of building for the Web.
+    </h2>
+    <ul>
+      <li>
+        Solid is an ecosystem.
+        <ul>
+          <li class="next">Standards enable interoperability.</li>
+        </ul>
+      </li>
+      <li>
+        Solid is a movement.
+        <ul>
+          <li class="next">We need to shift the app builder mindset.</li>
+        </ul>
+      </li>
+      <li>
+        Solid is a community.
+        <ul>
+          <li class="next">
+            Building Solid requires different people,<br>
+            companies, and organisations.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
   <div class="toc slide" id="toc-standards-commmunity">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
