Add use case images.

--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
     </ul>
   </div>
 
+  <div class="slide" id="supermarket-before">
+    <figure class="cover width grayscale">
+      <img src="images/supermarket.jpg" alt="[couple shopping at a supermarket]">
+    </figure>
+  </div>
+
+  <div class="slide" id="job-search-before">
+    <figure class="cover width grayscale">
+      <img src="images/job-search.jpg" alt="[person applying for jobs]">
+    </figure>
+  </div>
+
+  <div class="slide" id="doctor-before">
+    <figure class="cover width grayscale">
+      <img src="images/doctor.jpg" alt="[doctor treating a patient]">
+    </figure>
+  </div>
+
   <div class="dark cover slide" id="walled-gardens">
     <h2>
       Within a landscape of silos,<br>
@@ -139,6 +157,24 @@
     </h2>
     <figure class="cover width margin">
       <img src="images/infinite-innovation.svg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="supermarket">
+    <figure class="cover width">
+      <img src="images/supermarket.jpg" alt="[couple shopping at a supermarket]">
+    </figure>
+  </div>
+
+  <div class="slide" id="job-search">
+    <figure class="cover width">
+      <img src="images/job-search.jpg" alt="[person applying for jobs]">
+    </figure>
+  </div>
+
+  <div class="slide" id="doctor">
+    <figure class="cover width">
+      <img src="images/doctor.jpg" alt="[doctor treating a patient]">
     </figure>
   </div>
 
