--- a/index.html
+++ b/index.html
@@ -340,6 +340,30 @@
     </ul>
   </div>
 
+  <div class="logo slide" id="imec">
+    <figure class="cover width margin">
+      <img src="images/imec.png" alt="imec">
+    </figure>
+  </div>
+
+  <div class="logo slide" id="inrupt">
+    <figure class="cover width margin">
+      <img src="images/inrupt.svg" alt="Inrupt">
+    </figure>
+  </div>
+
+  <div class="logo slide" id="digita">
+    <figure class="cover width margin">
+      <img src="images/digita.png" alt="Digita">
+    </figure>
+  </div>
+
+  <div class="logo slide" id="solidlab">
+    <figure class="cover width margin">
+      <img src="images/solidlab.png" alt="SolidLab">
+    </figure>
+  </div>
+
   <div class="toc slide" id="recap">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
