Mention Flanders project.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,10 @@
         By separating data from apps,<br>
         we create independent choices.
       </li>
+      <li class="next">
+        All 6.5 million people in Flanders<br>
+        will receive a Solid personal data pod.
+      </li>
     </ul>
     <figure class="cover height">
       <img class="faded" src="images/solid-logo.svg" alt="[the Solid logo]" />
