--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Solid: Your data, your choice</title>
+  <title>Inspiring data-driven innovation</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
@@ -10,20 +10,20 @@
 </head>
 <body class="shower list">
   <header class="caption">
-    <h1>Solid: Your data, your choice</h1>
+    <h1>Inspiring data-driven innovation</h1>
     <p>
       <a href="https://ruben.verborgh.org/">Ruben Verborgh</a>,
       <a href="http://www.ugent.be/">Ghent University</a> –
       <a href="http://www.imec.be/">imec</a>
     </p>
     <p class="venue">
-      <a href="https://2022.openbelgium.be/">Open Belgium</a>,
-      29 April 2022
+      <a href="https://events.sidn.nl/sidn-inspire">SIDN Inspire: future internet</a>,
+      25 May 2022
     </p>
   </header>
 
   <div class="title slide" id="title">
-    <h2>Solid<br><em>Your data, your choice</em></h2>
+    <h2>Inspiring<br> data-driven<br> innovation</h2>
     <p class="author">Ruben Verborgh</p>
     <p class="affiliation">Ghent University – imec</p>
   </div>
@@ -384,7 +384,7 @@
   </div>
 
   <footer>
-    <p class="badge"><a href="https://github.com/RubenVerborgh/Open-Belgium-2022">View on GitHub</a></p>
+    <p class="badge"><a href="https://github.com/RubenVerborgh/SIDN-Inspire-2022">View on GitHub</a></p>
     <p class="license">
       ©2017–2022 <a href="https://ruben.verborgh.org/">Ruben Verborgh</a> –
       Except where otherwise noted,
