--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <div class="toc slide" id="toc">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
       <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
@@ -46,7 +46,7 @@
   <div class="toc slide" id="toc-big-data">
     <ul>
       <li class="current"><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
       <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
@@ -81,7 +81,7 @@
   <div class="toc slide" id="toc-decentralized-data">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li class="current"><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li class="current"><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
       <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
@@ -217,7 +217,7 @@
   <div class="toc slide" id="toc-standards-commmunity">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
       <li class="current"><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
@@ -353,7 +353,7 @@
   <div class="toc slide" id="recap">
     <ul>
       <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data empowering people</a></li>
+      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
       <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
