--- a/index.html
+++ b/index.html
@@ -51,6 +51,183 @@
     </ul>
   </div>
 
+  <div class="slide" id="mainframes">
+    <h2>
+      The history of computing<br>
+      started out centralized.
+    </h2>
+    <ul>
+      <li>
+        Large <em>mainframes</em> provided computational power<br>
+        for an entire organization.
+        <ul>
+          <li>
+            People brought punched cards to a control room,<br>
+            where they were processed by a machine.
+          </li>
+        </ul>
+      </li>
+      <li class="next">
+        When networking came along,<br>
+        <em>terminals</em> interfaced with mainframes.
+        <ul>
+          <li>
+            The server possessed magnitudes more<br> computational power
+            than the client.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="pc">
+    <h2>
+      Personal computing decentralized<br>
+      computational power.
+    </h2>
+    <ul>
+      <li>
+        Personal computers were able to perform<br>
+        enough calculations for simple software.
+        <ul class="inline">
+          <li>spreadsheets</li>
+          <li>word processing</li>
+          <li>…</li>
+        </ul>
+      </li>
+      <li class="next">
+        Up to the 2000s, only few of these<br>
+        were connected to the Internet.
+        <ul>
+          <li>Data and software were transferred using physical media.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="internet">
+    <h2>
+      Even when the Internet became popular,<br>
+      data and CPU remained decentralized.
+    </h2>
+    <ul>
+      <li>
+        Desktop software remained dominant.
+        <ul>
+          <li>Data remained on-device.</li>
+          <li>Processing remained on-device.</li>
+        </ul>
+      </li>
+      <li class="next">
+        The Web provided a way to:
+        <ul>
+          <li>retrieve information faster</li>
+          <li>retrieve information we did not have before</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="universality">
+    <h2>
+      The Web strives to be <em><a href="https://www.w3.org/2005/Talks/0323-yorkshire-tbl/slide5-2.html">universal</a></em><br> through
+      independence of many factors.
+    </h2>
+    <ul>
+      <li>
+        Anyone can use the Web, regardless of:
+        <dl>
+          <dt>hardware</dt>
+          <dd>desktop</dd>
+          <dd>phone</dd>
+          <dd>tablet</dd>
+          <dd>watch</dd>
+          <dd>…</dd>
+
+          <dt>software</dt>
+          <dd>operating system</dd>
+          <dd>browser</dd>
+          <dd>app</dd>
+          <dd>…</dd>
+        </dl>
+      </li>
+      <li class="next">
+       Developers are free to innovate.
+        <ul>
+          <li>Build for the Web.</li>
+          <li>Standards provide interoperability.</li>
+        </ul>
+      </li>
+      <li class="next">
+        Unfortunately, this is not the default elsewhere.
+        <ul>
+          <li>App stores are a prominent counterexample.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="cloud">
+    <h2>
+      The <em>software-as-a-service</em> model brought<br>
+      storage and processing to the cloud.
+    </h2>
+    <ul>
+      <li>
+        Centralized software platforms reduced friction.
+        <ul>
+          <li>Sharing becomes easier by linking.</li>
+          <li>Real-time collaborative editing becomes possible.</li>
+          <li>Users always have the latest software.</li>
+        </ul>
+      </li>
+      <li class="next">
+        Data processing and storage are outsourced.
+        <ul>
+          <li>Once again, our devices act as terminals.</li>
+        </ul>
+      </li>
+      <li class="next">
+        Platforms leverage universality<span class="next">—and threaten it.</span>
+        <ul>
+          <li>
+            You only need a spec-compliant browser<span class="next">—and an account.</span>
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="more-than-tech">
+    <h2>
+      The pendulum of (de-)centralization<br>
+      is driven by more than just technology.
+    </h2>
+    <ul>
+      <li>
+        The technological gap between clients<br> and servers
+        is smaller than ever.
+        <ul>
+          <li class="next">
+            Servers resemble ordinary computers.
+          </li>
+          <li class="next">
+            Even some of our portable devices are more powerful<br>
+            than our personal computers were a decade ago.
+          </li>
+        </ul>
+      </li>
+      <li class="next">
+        Many cloud applications could still run on-device.
+        <ul>
+          <li class="next">
+            The UI in fact often does.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
   <div id="facebook-photo-transfer" class="story slide">
     <figure class="cover height">
       <img src="images/facebook-photo-transfer.png" alt=""/>
