Add pod/client discussion.

--- a/index.html
+++ b/index.html
@@ -457,7 +457,92 @@
     </ul>
   </div>
 
-  <div class="slide" id="past">
+    <div class="slide" id="server">
+    <h2>
+      A Solid server acts as a data pod<br>
+      that stores and guards your data.
+    </h2>
+    <ul>
+      <li class="next">
+       It is a regular Web server
+        <ul>
+          <li>…with support for access control.</li>
+          <li>…with support for Linked Data.</li>
+        </ul>
+      </li>
+      <li class="next">
+       Its interface is application-agnostic.
+        <ul>
+          <li>Build <em>any</em> application, like on the Web.</li>
+          <li>Application-specific logic resides in clients.</li>
+        </ul>
+      </li>
+      <li class="next">
+        A Solid pod is essentially a website with data.
+        <ul>
+          <li>Its data is compatible with any Solid app.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="data-pod">
+    <h2>
+      A data pod can contain any data<br>
+      you create or need online.
+    </h2>
+    <ul>
+      <li>profile 👤</li>
+      <li>media 🖼</li>
+      <li>comments 🗣</li>
+      <li>likes 👍</li>
+      <li>… ✨</li>
+    </ul>
+  </div>
+
+  <div class="slide" id="client">
+    <h2>
+      Solid clients are browser or native apps<br>
+      that read from or write to your data pod.
+    </h2>
+    <ul>
+      <li>
+        People give read and/or write permissions<br>
+        for specific pieces of data to:
+        <ul>
+          <li>apps</li>
+          <li>other people</li>
+          <li>automated agents</li>
+          <li>…</li>
+        </ul>
+      </li>
+      <li class="next">
+        Apps deliver an integrated experience.
+        <ul>
+          <li>
+            Instead of displaying individual webpages or data items,<br>
+            apps interleave data from multiple sources.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="apps">
+    <h2>
+      Any app you can envision,<br>
+      you can build with Solid.
+    </h2>
+    <ul>
+      <li>calendar 📅</li>
+      <li>social feed 👥</li>
+      <li>photo sharing 📸</li>
+      <li>conference organization system 🎤</li>
+      <li>… ✨</li>
+    </ul>
+  </div>
+
+  <div class="slide" id="open-source">
     <h2>
       Several open-source implementations<br>
       of servers, apps, and libraries exist.
@@ -519,19 +604,19 @@
     </h2>
     <ul>
       <li class="next">
-        follows the Solid specifications
+        It follows the Solid specifications.
         <ul>
           <li>anticipate envisaged spec evolutions</li>
         </ul>
       </li>
       <li class="next">
-        helpful companion for app developers
+        It’s a helpful companion for app developers.
         <ul>
           <li>lightweight and easy to configure</li>
         </ul>
       </li>
       <li class="next">
-        support extension and experimentation
+        It supports extension and experimentation.
         <ul>
           <li>testing bed for the future of Solid</li>
         </ul>
@@ -546,7 +631,6 @@
     </h2>
     <ul>
       <li class="next">Ensuring the sustainability of the server.</li>
-      <li class="next">Starting under Open Knowledge Belgium.</li>
       <li class="next">
         Guarantee long-term maintenance<br>
         and inspire the future of Solid.
