--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Inspiring data-driven innovation</title>
+  <title>Personal Data Vaults &amp; The Data Driven Economy</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
@@ -10,20 +10,20 @@
 </head>
 <body class="shower list">
   <header class="caption">
-    <h1>Inspiring data-driven innovation</h1>
+    <h1>Personal Data Vaults &amp; The Data Driven Economy</h1>
     <p>
       <a href="https://ruben.verborgh.org/">Ruben Verborgh</a>,
       <a href="http://www.ugent.be/">Ghent University</a> –
       <a href="http://www.imec.be/">imec</a>
     </p>
     <p class="venue">
-      <a href="https://events.sidn.nl/sidn-inspire">SIDN Inspire: future internet</a>,
-      25 May 2022
+      <a href="https://events.sidn.nl/sidn-inspire">Re:connect 2022 by AE</a>,
+      17 June 2022
     </p>
   </header>
 
   <div class="title slide" id="title">
-    <h2>Inspiring<br> data-driven<br> innovation</h2>
+    <h2>Personal Data Vaults &amp;<br> The Data Driven Economy</h2>
     <p class="author">Ruben Verborgh</p>
     <p class="affiliation">Ghent University – imec</p>
   </div>
@@ -661,7 +661,7 @@
   </div>
 
   <footer>
-    <p class="badge"><a href="https://github.com/RubenVerborgh/SIDN-Inspire-2022">View on GitHub</a></p>
+    <p class="badge"><a href="https://github.com/RubenVerborgh/AE-Reconnect-2022">View on GitHub</a></p>
     <p class="license">
       ©2017–2022 <a href="https://ruben.verborgh.org/">Ruben Verborgh</a> –
       Except where otherwise noted,
