--- a/index.html
+++ b/index.html
@@ -639,6 +639,24 @@
     </ul>
   </div>
 
+  <div class="logo slide" id="imec">
+    <figure class="cover width margin">
+      <img src="images/imec.png" alt="imec">
+    </figure>
+  </div>
+
+  <div class="logo slide" id="inrupt">
+    <figure class="cover width margin">
+      <img src="images/inrupt.svg" alt="Inrupt">
+    </figure>
+  </div>
+
+  <div class="logo slide" id="digita">
+    <figure class="cover width margin">
+      <img src="images/digita.png" alt="Digita">
+    </figure>
+  </div>
+
   <div class="logo slide" id="solidlab">
     <figure class="cover width margin">
       <img src="images/solidlab.png" alt="SolidLab">
