--- a/index.html
+++ b/index.html
@@ -167,6 +167,50 @@
     </ul>
   </div>
 
+    <div class="slide" id="freedom-of-expression">
+    <h2>
+      The Web brings <em>freedom of expression</em><br>
+      to everyone across the world.
+    </h2>
+    <ul>
+      <li class="next">
+        <q>Anyone can say anything about anything.</q>
+      </li>
+      <li class="next">
+        We all have our own spaces,<br>
+        so we don’t have to agree.
+      </li>
+      <li class="next">
+        We can <em>link</em> to opinions of others<br>
+        to discuss about them.
+      </li>
+    </ul>
+  </div>
+
+  <div class="slide" id="permissionless-innovation">
+    <h2>
+      The Web brings <em>permissionless innovation</em><br>
+      at a global scale.
+    </h2>
+    <ul>
+      <li class="next">
+        Anyone can build anything for any reason.
+      </li>
+      <li class="next">
+        The technologies are open.
+      </li>
+      <li class="next">
+        You don’t need anyone’s permission<br>
+        to join the Web and launch a new idea.
+        <ul>
+          <li class="next">
+            This contrast with app stores.
+          </li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
   <div class="slide" id="cloud">
     <h2>
       The <em>software-as-a-service</em> model brought<br>
@@ -260,6 +304,32 @@
     <span class="label year">2019</span>
     <span class="label item">photo</span>
     <span class="label distance">11 km</span>
+  </div>
+
+  <div class="slide" id="ladder">
+    <h2>
+      Ironically, permissionless innovation<br>
+      even allows platforms that prevent it.
+    </h2>
+    <blockquote>
+      <p class="next">
+        The Facebook founder has no intention of <br>
+        allowing anyone to build anything on his platform<br>
+        that does not have his express approval.
+      </p>
+      <p class="next">
+        Having profited mightily from the Web’s openness,<br>
+        he has kicked away the ladder that elevated him<br>
+        to his current eminence.
+      </p>
+      <cite><a href="https://www.theguardian.com/commentisfree/2016/aug/28/tim-berners-lee-open-web-mark-zuckerberg-facebook">John Naughton, The Guardian</a></cite>
+    </blockquote>
+    <figure class="cover width">
+      <img class="faded" src="images/ladder.jpg" alt="[photo of a ladder]">
+      <figcaption>
+        © <a href="https://www.flickr.com/photos/24561532@N03/2470520049/">Vinayak Shankar Rao</a>
+      </figcaption>
+    </figure>
   </div>
 
   <div class="slide" id="supermarket-before">
