--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Personal Data Vaults &amp; The Data Driven Economy</title>
+  <title>Delivering trusted data via Solid pods</title>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
@@ -10,20 +10,20 @@
 </head>
 <body class="shower list">
   <header class="caption">
-    <h1>Personal Data Vaults &amp; The Data Driven Economy</h1>
+    <h1>Delivering trusted data via Solid pods</h1>
     <p>
       <a href="https://ruben.verborgh.org/">Ruben Verborgh</a>,
       <a href="http://www.ugent.be/">Ghent University</a> –
       <a href="http://www.imec.be/">imec</a>
     </p>
     <p class="venue">
-      <a href="https://events.sidn.nl/sidn-inspire">Re:connect 2022 by AE</a>,
-      17 June 2022
+      <a href="http://2023.ldk-conf.org/">4<sup>th</sup> Conference on Language, Data and Knowledge</a>,
+      15 September 2023
     </p>
   </header>
 
   <div class="title slide" id="title">
-    <h2>Personal Data Vaults &amp;<br> The Data Driven Economy</h2>
+    <h2>Delivering trusted data<br> via Solid pods</h2>
     <p class="author">Ruben Verborgh</p>
     <p class="affiliation">Ghent University – imec</p>
   </div>
@@ -748,10 +748,16 @@
     </p>
   </div>
 
+  <div class="title slide" id="end">
+    <h2>Delivering trusted data<br> via Solid pods</h2>
+    <p class="author"><a href="https://ruben.verborgh.org/">ruben.verborgh.org</a></p>
+    <p class="affiliation">Ghent University – imec</p>
+  </div>
+
   <footer>
-    <p class="badge"><a href="https://github.com/RubenVerborgh/AE-Reconnect-2022">View on GitHub</a></p>
+    <p class="badge"><a href="https://github.com/RubenVerborgh/LDK-2023">View on GitHub</a></p>
     <p class="license">
-      ©2017–2022 <a href="https://ruben.verborgh.org/">Ruben Verborgh</a> –
+      ©2017–2023 <a href="https://ruben.verborgh.org/">Ruben Verborgh</a> –
       Except where otherwise noted,
       the content of these slides is
       licensed under <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0</a>.
