--- a/index.html
+++ b/index.html
@@ -28,11 +28,21 @@
     <p class="affiliation">Ghent University – imec</p>
   </div>
 
+  <div class="dark slide" id="kije-1">
+    <figure class="cover height">
+      <img src="images/kije.jpg" alt=""/>
+    </figure>
+  </div>
+
+  <div class="dark slide" id="kije-2">
+    <figure class="cover height">
+      <img src="images/kije-poster.jpg" alt=""/>
+    </figure>
+  </div>
+
   <div class="text slide" id="intro">
-    <p>
-      How will your data<br>
-      empower <em>you</em> today?
-    </p>
+    <p>Data is no longer<br> the new gold.</p>
+    <p class="next"><em>Trust is.</em></p>
   </div>
 
   <div class="toc slide" id="toc">
@@ -741,11 +751,10 @@
     </ul>
   </div>
 
-  <div class="text slide" id="outro">
-    <p>
-      How does your data<br>
-      empower <em>you</em>?
-    </p>
+  <div class="dark slide" id="kije-3">
+    <figure class="cover height">
+      <img src="images/kije-poster.jpg" alt=""/>
+    </figure>
   </div>
 
   <div class="title slide" id="end">
