--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
 
   <div class="toc slide" id="toc">
     <ul>
-      <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
-      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+      <li><a href="#toc-anyone-anything">Anyone can say anything</a></li>
+      <li><a href="#toc-solid">Changing how we think about data</a></li>
+      <li><a href="#toc-trust">Trust through standards</a></li>
     </ul>
   </div>
 
-  <div class="toc slide" id="toc-big-data">
+  <div class="toc slide" id="toc-anyone-anything">
     <ul>
-      <li class="current"><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
-      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+      <li class="current"><a href="#toc-anyone-anything">Anyone can say anything</a></li>
+      <li><a href="#toc-solid">Changing how we think about data</a></li>
+      <li><a href="#toc-trust">Trust through standards</a></li>
     </ul>
   </div>
 
@@ -342,6 +342,14 @@
     </figure>
   </div>
 
+  <div class="toc slide" id="toc-solid">
+    <ul>
+      <li><a href="#toc-anyone-anything">Anyone can say anything</a></li>
+      <li class="current"><a href="#toc-solid">Changing how we think about data</a></li>
+      <li><a href="#toc-trust">Trust through standards</a></li>
+    </ul>
+  </div>
+
   <div class="slide" id="supermarket-before">
     <figure class="cover width grayscale">
       <img src="images/supermarket.jpg" alt="[couple shopping at a supermarket]">
@@ -358,23 +366,6 @@
     <figure class="cover width grayscale">
       <img src="images/doctor.jpg" alt="[doctor treating a patient]">
     </figure>
-  </div>
-
-  <div class="dark cover slide" id="walled-gardens">
-    <figure class="cover width">
-      <img src="images/walled-gardens.jpg">
-      <figcaption>
-        © David Simonds
-      </figcaption>
-    </figure>
-  </div>
-
-  <div class="toc slide" id="toc-decentralized-data">
-    <ul>
-      <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li class="current"><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
-      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
-    </ul>
   </div>
 
   <div class="slide" id="solid-logo">
@@ -475,6 +466,14 @@
     </figure>
   </div>
 
+  <div class="toc slide" id="toc-trust">
+    <ul>
+      <li><a href="#toc-anyone-anything">Anyone can say anything</a></li>
+      <li><a href="#toc-solid">Changing how we think about data</a></li>
+      <li class="current"><a href="#toc-trust">Trust through standards</a></li>
+    </ul>
+  </div>
+
   <div class="slide" id="ecosystem">
     <h2>
       Solid is <em>not</em> an app or platform.<br>
@@ -502,14 +501,6 @@
           </li>
         </ul>
       </li>
-    </ul>
-  </div>
-
-  <div class="toc slide" id="toc-standards-commmunity">
-    <ul>
-      <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
-      <li class="current"><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
     </ul>
   </div>
 
@@ -719,24 +710,6 @@
     </ul>
   </div>
 
-  <div class="logo slide" id="imec">
-    <figure class="cover width margin">
-      <img src="images/imec.png" alt="imec">
-    </figure>
-  </div>
-
-  <div class="logo slide" id="inrupt">
-    <figure class="cover width margin">
-      <img src="images/inrupt.svg" alt="Inrupt">
-    </figure>
-  </div>
-
-  <div class="logo slide" id="digita">
-    <figure class="cover width margin">
-      <img src="images/digita.png" alt="Digita">
-    </figure>
-  </div>
-
   <div class="logo slide" id="solidlab">
     <figure class="cover width margin">
       <img src="images/solidlab.png" alt="SolidLab">
@@ -745,9 +718,9 @@
 
   <div class="toc slide" id="recap">
     <ul>
-      <li><a href="#toc-big-data">Big Data thinking</a></li>
-      <li><a href="#toc-decentralized-data">Data inspiring innovation</a></li>
-      <li><a href="#toc-standards-commmunity">Standards &amp; Community</a></li>
+      <li><a href="#toc-anyone-anything">Anyone can say anything</a></li>
+      <li><a href="#toc-solid">Changing how we think about data</a></li>
+      <li><a href="#toc-trust">Trust through standards</a></li>
     </ul>
   </div>
 
