Add trust story.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
         </ul>
       </li>
     </ul>
+    <figure class="cover width">
+      <img class="faded" src="images/legacy.jpg" alt="">
+      <figcaption>
+        ©2017 <a href="https://www.flickr.com/photos/mrfraley/37409810305/">Michael Fraley</a>
+      </figcaption>
+    </figure>
   </div>
 
   <div class="slide" id="pc">
@@ -177,7 +183,7 @@
     </ul>
   </div>
 
-    <div class="slide" id="freedom-of-expression">
+  <div class="slide" id="freedom-of-expression">
     <h2>
       The Web brings <em>freedom of expression</em><br>
       to everyone across the world.
@@ -193,6 +199,35 @@
       <li class="next">
         We can <em>link</em> to opinions of others<br>
         to discuss about them.
+      </li>
+    </ul>
+    <figure class="cover width">
+      <img class="faded" src="images/freedom-of-speech.jpg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="llm-anything">
+    <h2>
+      Large language models are quite good<br>
+      at saying anything about anything.
+    </h2>
+    <ul>
+      <li>
+        Search engine spam is bound to get worse.
+        <ul>
+          <li>
+            …and it’s not just the search engines
+            that will get fooled.
+          </li>
+        </ul>
+      </li>
+      <li>
+        Their output becomes part of the open Web.
+      </li>
+      <li>
+        Interesting effects happen when
+        their previous confabulations
+        become their new input.
       </li>
     </ul>
   </div>
@@ -219,6 +254,12 @@
         </ul>
       </li>
     </ul>
+    <figure class="cover width">
+      <img class="faded" src="images/innovation.jpg" alt="">
+      <figcaption>
+        ©2012 <a href="https://www.flickr.com/photos/sparkfun/8167728006/">SparkFun Electronics</a>
+      </figcaption>
+    </figure>
   </div>
 
   <div class="slide" id="cloud">
@@ -279,7 +320,13 @@
           </li>
         </ul>
       </li>
+      <li class="next">
+        Unfortunately, we have an innovation problem.
+      </li>
     </ul>
+    <figure class="cover width">
+      <img class="faded" src="images/metronome.jpg" alt="">
+    </figure>
   </div>
 
   <div id="facebook-photo-transfer" class="story slide">
@@ -560,14 +607,14 @@
   <div class="slide" id="data-pod">
     <h2>
       A data pod can contain any data<br>
-      you create or need online.
+      you create or interact with.
     </h2>
     <ul>
-      <li>profile 👤</li>
-      <li>media 🖼</li>
-      <li>comments 🗣</li>
-      <li>likes 👍</li>
-      <li>… ✨</li>
+      <li>education and employment</li>
+      <li>licenses, certificates, contracts</li>
+      <li>health data</li>
+      <li>media</li>
+      <li>…</li>
     </ul>
   </div>
 
@@ -601,15 +648,24 @@
 
   <div class="slide" id="apps">
     <h2>
-      Any app you can envision,<br>
+      Any use case you can envision,<br>
       you can build with Solid.
     </h2>
     <ul>
-      <li>calendar 📅</li>
-      <li>social feed 👥</li>
-      <li>photo sharing 📸</li>
-      <li>conference organization system 🎤</li>
-      <li>… ✨</li>
+      <li>
+        The data is already there.
+        <ul>
+          <li>
+            Apps will read data they haven’t written.
+          </li>
+        </ul>
+      </li>
+      <li>
+        Solid is ultimately about making data flow better.
+        <ul>
+          <li>…under control of the individual.</li>
+        </ul>
+      </li>
     </ul>
   </div>
 
@@ -695,19 +751,55 @@
     </ul>
   </div>
 
-  <div class="slide" id="cssa">
+  <div class="slide" id="no-more-raw-data">
     <h2>
-      The <a href="https://opencollective.com/community-solid-server/updates/community-solid-server-association">Community Solid Server Association</a><br>
-      will steward the server and its resources.
+      No more raw data.<br>
+      <em>Data</em> and <em>trust</em> need to travel together.
+    </h2>
+    <figure class="cover width">
+      <img src="images/envelope.jpg" alt="">
+    </figure>
+  </div>
+
+  <div class="slide" id="trust-envelope">
+    <h2>
+      Solid server need to encapsulate data<br>
+      in a <em>trust envelope</em>.
     </h2>
     <ul>
-      <li class="next">Ensuring the sustainability of the server.</li>
-      <li class="next">
-        Guarantee long-term maintenance<br>
-        and inspire the future of Solid.
+      <li>
+        The envelope describes <em>usage policies</em>.
+        <ul>
+          <li>
+            The person can trust that
+            their data is used correctly.
+          </li>
+          <li>
+            The recipient can prove
+            they use data correctly.
+          </li>
+        </ul>
       </li>
-      <li class="next"><strong>Join us to help determine that future!</strong></li>
+      <li>
+        The envelope describes <em>provenance</em>.
+        <ul>
+          <li>
+            The recipient can rely on
+            correctness of the data.
+          </li>
+        </ul>
+      </li>
     </ul>
+  </div>
+
+  <div class="slide" id="shoes">
+    <h2>
+      I want everyone to know my shoe size.<br>
+      Please don’t even ask me.
+    </h2>
+    <figure class="cover width">
+      <img src="images/shoes.jpg" alt="">
+    </figure>
   </div>
 
   <div class="logo slide" id="solidlab">
