--- a/index.html
+++ b/index.html
@@ -208,11 +208,11 @@
 
   <div class="slide" id="llm-anything">
     <h2>
-      Large language models are quite good<br>
+     <span class="next"> Large language models</span> are quite good<br>
       at saying anything about anything.
     </h2>
     <ul>
-      <li>
+      <li class="next">
         Search engine spam is bound to get worse.
         <ul>
           <li>
@@ -221,10 +221,10 @@
           </li>
         </ul>
       </li>
-      <li>
+      <li class="next">
         Their output becomes part of the open Web.
       </li>
-      <li>
+      <li class="next">
         Interesting effects happen when
         their previous confabulations
         become their new input.
@@ -669,6 +669,15 @@
     </ul>
   </div>
 
+  <div class="slide" id="athumi">
+    <h2>
+      
+    </h2>
+     <figure class="cover width">
+      <img src="images/athumi.png" alt=""/>
+    </figure>
+  </div>
+
   <div class="slide" id="open-source">
     <h2>
       Several open-source implementations<br>
@@ -763,7 +772,7 @@
 
   <div class="slide" id="trust-envelope">
     <h2>
-      Solid server need to encapsulate data<br>
+      Solid servers need to encapsulate data<br>
       in a <em>trust envelope</em>.
     </h2>
     <ul>
